@@ -2,25 +2,27 @@ package com.xiaotao.saltedfishcloud.controller;
 
 import com.github.pagehelper.PageHelper;
 import com.github.pagehelper.PageInfo;
+import com.sfc.archive.model.DiskFileSystemCompressParam;
+import com.sfc.archive.service.DiskFileSystemArchiveService;
+import com.sfc.constant.error.FileSystemError;
+import com.sfc.enums.ProtectLevel;
+import com.xiaotao.saltedfishcloud.annotations.AllowAnonymous;
 import com.xiaotao.saltedfishcloud.annotations.NotBlock;
 import com.xiaotao.saltedfishcloud.annotations.ProtectBlock;
-import com.xiaotao.saltedfishcloud.annotations.AllowAnonymous;
-import com.xiaotao.saltedfishcloud.constant.error.FileSystemError;
+import com.xiaotao.saltedfishcloud.exception.JsonException;
 import com.xiaotao.saltedfishcloud.model.FileTransferInfo;
 import com.xiaotao.saltedfishcloud.model.json.JsonResult;
 import com.xiaotao.saltedfishcloud.model.json.JsonResultImpl;
 import com.xiaotao.saltedfishcloud.model.param.*;
 import com.xiaotao.saltedfishcloud.model.po.file.FileInfo;
-import com.xiaotao.saltedfishcloud.enums.ArchiveType;
-import com.xiaotao.saltedfishcloud.enums.ProtectLevel;
-import com.xiaotao.saltedfishcloud.exception.JsonException;
 import com.xiaotao.saltedfishcloud.service.breakpoint.annotation.BreakPoint;
 import com.xiaotao.saltedfishcloud.service.breakpoint.annotation.MergeFile;
 import com.xiaotao.saltedfishcloud.service.file.DiskFileSystem;
 import com.xiaotao.saltedfishcloud.service.file.DiskFileSystemManager;
 import com.xiaotao.saltedfishcloud.service.wrap.WrapService;
-import com.xiaotao.saltedfishcloud.utils.*;
-import com.xiaotao.saltedfishcloud.validator.FileNameValidator;
+import com.xiaotao.saltedfishcloud.utils.PathUtils;
+import com.xiaotao.saltedfishcloud.utils.ResourceUtils;
+import com.xiaotao.saltedfishcloud.utils.URLUtils;
 import com.xiaotao.saltedfishcloud.validator.annotations.FileName;
 import com.xiaotao.saltedfishcloud.validator.annotations.UID;
 import io.swagger.annotations.Api;
@@ -37,8 +39,8 @@ import javax.servlet.http.HttpServletResponse;
 import javax.validation.Valid;
 import java.io.IOException;
 import java.net.URLDecoder;
-import java.util.Collection;
-import java.util.List;
+import java.nio.charset.StandardCharsets;
+import java.util.*;
 
 /**
  * 浏览控制器，提供浏览功能
@@ -53,6 +55,7 @@ public class FileController {
     public static final String PREFIX = "/api/diskFile/";
 
     private final DiskFileSystemManager fileSystemManager;
+    private final DiskFileSystemArchiveService archiveService;
     private final WrapService wrapService;
 
 
@@ -63,10 +66,20 @@ public class FileController {
      */
 
     /**
+     * 异步方式创建压缩任务
+     * @param param     压缩参数
+     * @return          任务id
+     */
+    @PostMapping("asyncCompress")
+    public JsonResult<Long> asyncCompress(@RequestBody DiskFileSystemCompressParam param) throws IOException {
+        return JsonResultImpl.getInstance(archiveService.asyncCompress(param));
+    }
+
+    /**
      * 创建文件夹
      */
     @PutMapping("dir/**")
-    public JsonResult mkdir(@PathVariable @UID(true) int uid,
+    public JsonResult<Object> mkdir(@PathVariable @UID(true) int uid,
                             HttpServletRequest request,
                             @RequestParam("name") @FileName String name) throws JsonException, IOException {
         String requestPath = URLUtils.getRequestFilePath(PREFIX + uid + "/dir", request);
@@ -83,7 +96,7 @@ public class FileController {
      */
     @PutMapping("file/**")
     @BreakPoint
-    public JsonResult upload(HttpServletRequest request,
+    public JsonResult<Long> upload(HttpServletRequest request,
                              @PathVariable @UID(true) int uid,
                              @RequestParam(value = "file", required = false) @MergeFile MultipartFile file,
                              @RequestParam(value = "md5", required = false) String md5) throws JsonException, IOException {
@@ -96,13 +109,13 @@ public class FileController {
     }
 
     @PostMapping("extractArchive/**")
-    public JsonResult extractArchive(@PathVariable @UID int uid,
+    public JsonResult<Object> extractArchive(@PathVariable @UID int uid,
                                      @RequestParam("name") String name,
                                      @RequestParam("dest") String dest,
                                      HttpServletRequest request) throws IOException {
         String path = URLUtils.getRequestFilePath(PREFIX + uid + "/extractArchive", request);
 
-        fileSystemManager.getMainFileSystem().extractArchive(uid, path, name, dest);
+        archiveService.extractArchive(uid, path, name, dest);
         return JsonResult.emptySuccess();
     }
 
@@ -112,9 +125,9 @@ public class FileController {
      * @param files 文件传输信息
      */
     @PostMapping("compress")
-    public JsonResult compress(@PathVariable @UID int uid,
+    public JsonResult<Object> compress(@PathVariable @UID int uid,
                                @RequestBody FileTransferInfo files) throws IOException {
-        fileSystemManager.getMainFileSystem().compress(uid, files.getSource(), files.getFilenames(), files.getDest(), ArchiveType.ZIP);
+        archiveService.compress(uid, files.getSource(), files.getFilenames(), files.getDest());
         return JsonResult.emptySuccess();
     }
 
@@ -126,7 +139,7 @@ public class FileController {
      */
     @PostMapping("wrap")
     @AllowAnonymous
-    public JsonResult createWrap(@PathVariable @UID int uid,
+    public JsonResult<Object> createWrap(@PathVariable @UID int uid,
                                  @RequestBody FileTransferInfo files) {
         String wid = wrapService.registerWrap(uid, files);
         return JsonResultImpl.getInstance(wid);
@@ -140,7 +153,7 @@ public class FileController {
      * @param path  文件保存目录路径
      */
     @PostMapping("quickSave")
-    public JsonResult quickSave(@UID @PathVariable int uid,
+    public JsonResult<Boolean> quickSave(@UID @PathVariable int uid,
                                 @RequestParam("path") String path,
                                 @RequestParam("name") String name,
                                 @RequestParam("md5") String md5) throws IOException {
@@ -175,17 +188,22 @@ public class FileController {
     @AllowAnonymous
     @GetMapping("fileList/byPath/**")
     @NotBlock
-    public JsonResult getFileList(HttpServletRequest request, @PathVariable @UID int uid) throws IOException {
+    public JsonResult<Collection<? extends FileInfo>[]> getFileList(HttpServletRequest request, @PathVariable @UID int uid) throws IOException {
         String requestPath = URLUtils.getRequestFilePath(PREFIX + uid + "/fileList/byPath", request);
         Collection<? extends FileInfo>[] fileList = fileSystemManager.getMainFileSystem().getUserFileList(uid, requestPath);
         return JsonResultImpl.getInstance(fileList);
 
     }
 
+    @ApiOperation("获取指定文件的信息")
+    @GetMapping("getFileInfo")
     @AllowAnonymous
-    @GetMapping("getFileList")
-    public JsonResult getFileList(@PathVariable String uid, @RequestParam("path") String path) {
-        return JsonResult.emptySuccess();
+    public JsonResult<FileInfo> getFileInfo(@PathVariable @UID int uid, @RequestParam("path") String path, @RequestParam("name") String name) throws IOException {
+        List<FileInfo>[] fileList = fileSystemManager.getMainFileSystem().getUserFileList(uid, path);
+        FileInfo fileInfo = Optional.ofNullable(fileList[1]).orElse(Collections.emptyList()).stream().filter(e -> Objects.equals(e.getName(), name))
+                .findAny()
+                .orElse(null);
+        return JsonResultImpl.getInstance(fileInfo);
     }
 
     /**
@@ -196,7 +214,7 @@ public class FileController {
     @GetMapping("fileList/byName/{name}")
     @AllowAnonymous
     @NotBlock
-    public JsonResult search(@PathVariable("name") String key,
+    public JsonResult<PageInfo<FileInfo>> search(@PathVariable("name") String key,
                              @PathVariable @UID int uid,
                              @RequestParam(value = "page", defaultValue = "1") Integer page) {
         PageHelper.startPage(page, 10);
@@ -240,7 +258,7 @@ public class FileController {
      */
     @ApiOperation("网盘文件复制（支持跨用户网盘）")
     @PostMapping("copy")
-    public JsonResult copy( @PathVariable("uid") @UID(true) long uid,
+    public JsonResult<Object> copy( @PathVariable("uid") @UID(true) long uid,
                             @RequestBody @Validated FileTransferParam info) throws IOException {
         int sourceUid = (int)uid;
         int targetUid = info.getTargetUid().intValue();
@@ -261,7 +279,7 @@ public class FileController {
      */
     @ApiOperation("网盘文件移动")
     @PostMapping("move")
-    public JsonResult move( @PathVariable("uid") @UID(true) long uid,
+    public JsonResult<Object> move( @PathVariable("uid") @UID(true) long uid,
                             @RequestBody @Validated FileTransferParam info) throws IOException {
         int sourceUid = (int)uid;
         for (FileItemTransferParam item : info.getFiles()) {
@@ -279,12 +297,12 @@ public class FileController {
      */
     @PostMapping("fromPath/**")
     @Deprecated
-    public JsonResult copy( @PathVariable("uid") @UID(true) int uid,
+    public JsonResult<Object> copy( @PathVariable("uid") @UID(true) int uid,
                             @RequestBody @Validated FileCopyOrMoveInfo info,
                             HttpServletRequest request) throws IOException {
         String requestPath = URLUtils.getRequestFilePath(PREFIX + uid + "/fromPath", request);
-        String source = URLDecoder.decode(requestPath, "UTF-8");
-        String target = URLDecoder.decode(info.getTarget(), "UTF-8");
+        String source = URLDecoder.decode(requestPath, StandardCharsets.UTF_8);
+        String target = URLDecoder.decode(info.getTarget(), StandardCharsets.UTF_8);
         for (NamePair file : info.getFiles()) {
             fileSystemManager.getMainFileSystem().copy(uid, source, target, uid, file.getSource(), file.getTarget(), info.isOverwrite());
         }
@@ -297,7 +315,7 @@ public class FileController {
      */
     @PutMapping("/fromPath/**")
     @Deprecated
-    public JsonResult move(HttpServletRequest request,
+    public JsonResult<Object> move(HttpServletRequest request,
                            @PathVariable("uid") @UID(true) int uid,
                            @RequestBody @Valid FileCopyOrMoveInfo info)
             throws IOException {
@@ -313,7 +331,7 @@ public class FileController {
      * 重命名文件
      */
     @PutMapping("name/**")
-    public JsonResult rename(HttpServletRequest request,
+    public JsonResult<Object> rename(HttpServletRequest request,
                              @PathVariable @UID(true) int uid,
                              @RequestParam("oldName") @Valid @FileName String oldName,
                              @RequestParam("newName") @Valid @FileName String newName) throws IOException {
@@ -333,12 +351,11 @@ public class FileController {
         =                Delete               =
         =======================================
      */
-
     /**
      * 删除文件或目录
      */
     @DeleteMapping("content/**")
-    public JsonResult delete(HttpServletRequest request,
+    public JsonResult<Long> delete(HttpServletRequest request,
                              @PathVariable @UID(true) int uid,
                              @RequestBody @Validated FileNameList fileName) throws IOException {
         String path = URLUtils.getRequestFilePath(PREFIX + uid + "/content", request);
